RESOLVED FIXED261735
ImageBuffer has inconsistent drawing virtual functions
https://bugs.webkit.org/show_bug.cgi?id=261735
Summary ImageBuffer has inconsistent drawing virtual functions
Kimmo Kinnunen
Reported 2023-09-19 06:11:30 PDT
ImageBuffer has inconsistent drawing virtual functions
Attachments
Radar WebKit Bug Importer
Comment 1 2023-09-19 06:11:38 PDT
Kimmo Kinnunen
Comment 2 2023-09-19 06:17:19 PDT
EWS
Comment 3 2023-09-20 23:04:39 PDT
Committed 268234@main (c4193e729734): <https://commits.webkit.org/268234@main> Reviewed commits have been landed. Closing PR #17911 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.