Source/WebCore/platform/graphics/ImageBuffer.cpp
@@ -211,7 +211,7 @@ static RefPtr<ImageBuffer> copyImageBuffer(Ref<ImageBuffer> source, PreserveReso
     if (!copyBuffer)
         return nullptr;
     if (source->hasOneRef())
-        ImageBuffer::drawConsuming(WTFMove(source), copyBuffer->context(), FloatRect { { }, copySize }, FloatRect { 0, 0, -1, -1 }, CompositeOperator::Copy);
+        copyBuffer->context().drawConsumingImageBuffer(WTFMove(source), FloatRect { { }, copySize }, FloatRect { 0, 0, -1, -1 }, CompositeOperator::Copy);
     else
         copyBuffer->context().drawImageBuffer(source, FloatPoint { }, CompositeOperator::Copy);
     return copyBuffer;
@@ -438,35 +438,6 @@ void ImageBuffer::draw(GraphicsContext& destContext, const FloatRect& destRect, 
             }
         }
     }
-}
-
-void ImageBuffer::drawPattern(GraphicsContext& destContext, const FloatRect& destRect, const FloatRect& srcRect, const AffineTransform& patternTransform, const FloatPoint& phase, const FloatSize& spacing, const ImagePaintingOptions& options)
-{
-    FloatRect adjustedSrcRect = srcRect;
-    adjustedSrcRect.scale(resolutionScale());
-
-    if (ensureBackendCreated()) {
-        if (auto image = copyImage(&destContext == &context() ? CopyBackingStore : DontCopyBackingStore))
-            image->drawPattern(destContext, destRect, adjustedSrcRect, patternTransform, phase, spacing, options);
-    }
-}
-
-void ImageBuffer::drawConsuming(GraphicsContext& destContext, const FloatRect& destRect, const FloatRect& srcRect, const ImagePaintingOptions& options)
-{
-    FloatRect adjustedSrcRect = srcRect;
-    adjustedSrcRect.scale(resolutionScale());
-
-    ASSERT(&destContext != &context());
-    if (auto* backend = ensureBackendCreated()) {
-        auto backendSize = backend->backendSize();
-        if (auto image = sinkIntoNativeImage())
-            destContext.drawNativeImageInternal(*image, backendSize, destRect, adjustedSrcRect, options);
-    }
-}
-
-void ImageBuffer::drawConsuming(RefPtr<ImageBuffer> imageBuffer, GraphicsContext& context, const FloatRect& destRect, const FloatRect& srcRect, const ImagePaintingOptions& options)
-{
-    imageBuffer->drawConsuming(context, destRect, srcRect, options);
 }
 
 void ImageBuffer::convertToLuminanceMask()
