Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferProxy.h
@@ -83,8 +83,6 @@ private:
 
     RefPtr<WebCore::Image> filteredImage(WebCore::Filter&) final;
 
-    void drawConsuming(WebCore::GraphicsContext& destContext, const WebCore::FloatRect& destRect, const WebCore::FloatRect& srcRect, const WebCore::ImagePaintingOptions&) final;
-
     WebCore::GraphicsContext& context() const final;
 
     RefPtr<WebCore::PixelBuffer> getPixelBuffer(const WebCore::PixelBufferFormat& destinationFormat, const WebCore::IntRect& srcRect, const WebCore::ImageBufferAllocator&) const final;
